# storage/api-docs/api-docs.json
@@ -1241,11 +1241,7 @@
                         "application/json": {
                             "schema": {
                                 "required": [
-                                    "business_id",
-                                    "service_user_id",
-                                    "services",
-                                    "status",
-                                    "full_price"
+                                    "business_id"
                                 ],
                                 "properties": {
                                     "business_id": {
@@ -1304,81 +1300,6 @@
                     }
                 },
                 "responses": {
-                    "200": {
-                        "description": "Order created successfully",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "success": {
-                                            "type": "boolean",
-                                            "example": true
-                                        },
-                                        "message": {
-                                            "type": "string",
-                                            "example": "Order created successfully"
-                                        },
-                                        "data": {
-                                            "properties": {
-                                                "id": {
-                                                    "type": "integer",
-                                                    "example": 1
-                                                },
-                                                "businessId": {
-                                                    "type": "object"
-                                                },
-                                                "serviceUsers": {
-                                                    "type": "object"
-                                                },
-                                                "storeUser": {
-                                                    "type": "object"
-                                                },
-                                                "services": {
-                                                    "type": "string",
-                                                    "example": "Haircut and styling"
-                                                },
-                                                "description": {
-                                                    "type": "string",
-                                                    "example": "Regular haircut with styling"
-                                                },
-                                                "status": {
-                                                    "type": "string",
-                                                    "example": "pending"
-                                                },
-                                                "full_price": {
-                                                    "type": "number",
-                                                    "format": "float",
-                                                    "example": 1000
-                                                },
-                                                "fee_price": {
-                                                    "type": "number",
-                                                    "format": "float",
-                                                    "example": 100
-                                                },
-                                                "profit_price": {
-                                                    "type": "number",
-                                                    "format": "float",
-                                                    "example": 50
-                                                },
-                                                "discount": {
-                                                    "type": "number",
-                                                    "format": "float",
-                                                    "example": 10
-                                                },
-                                                "created_at": {
-                                                    "type": "string",
-                                                    "format": "date-time",
-                                                    "example": "2024-01-01T12:00:00Z"
-                                                }
-                                            },
-                                            "type": "object"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    },
                     "422": {
                         "description": "Validation error",
                         "content": {
@@ -1528,81 +1449,6 @@
                     }
                 },
                 "responses": {
-                    "200": {
-                        "description": "Order updated successfully",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "success": {
-                                            "type": "boolean",
-                                            "example": true
-                                        },
-                                        "message": {
-                                            "type": "string",
-                                            "example": "Order updated successfully"
-                                        },
-                                        "data": {
-                                            "properties": {
-                                                "id": {
-                                                    "type": "integer",
-                                                    "example": 1
-                                                },
-                                                "businessId": {
-                                                    "type": "object"
-                                                },
-                                                "serviceUsers": {
-                                                    "type": "object"
-                                                },
-                                                "storeUser": {
-                                                    "type": "object"
-                                                },
-                                                "services": {
-                                                    "type": "string",
-                                                    "example": "Haircut and styling"
-                                                },
-                                                "description": {
-                                                    "type": "string",
-                                                    "example": "Regular haircut with styling"
-                                                },
-                                                "status": {
-                                                    "type": "string",
-                                                    "example": "completed"
-                                                },
-                                                "full_price": {
-                                                    "type": "number",
-                                                    "format": "float",
-                                                    "example": 1000
-                                                },
-                                                "fee_price": {
-                                                    "type": "number",
-                                                    "format": "float",
-                                                    "example": 100
-                                                },
-                                                "profit_price": {
-                                                    "type": "number",
-                                                    "format": "float",
-                                                    "example": 50
-                                                },
-                                                "discount": {
-                                                    "type": "number",
-                                                    "format": "float",
-                                                    "example": 10
-                                                },
-                                                "created_at": {
-                                                    "type": "string",
-                                                    "format": "date-time",
-                                                    "example": "2024-01-01T12:00:00Z"
-                                                }
-                                            },
-                                            "type": "object"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    },
                     "422": {
                         "description": "Validation error",
                         "content": {
